--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.2.0",
     "@ngrx/effects": "^5.1.0",
     "@ngrx/store": "^5.1.0",
+    "@ngrx/store-devtools": "^5.1.0",
     "angular-material-icons": "^0.7.1",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
